update: styles and components of card and pagination modified

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,4 +9,5 @@
     grid-auto-flow: dense;
     grid-auto-rows: 15rem;
     grid-template-columns: repeat(auto-fill, minmax(20rem,1fr));
+    row-gap: 15rem;
 }
