--- a/src/app/components/card-image/card-image.component.html
+++ b/src/app/components/card-image/card-image.component.html
@@ -1,6 +1,8 @@
-<div class="card" style="width: 18rem;">
-    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Image_created_with_a_mobile_phone.png/1200px-Image_created_with_a_mobile_phone.png" alt="Card image cap">
+<div class="card" style="width: 22rem; height: 28rem;">
+    <img class="card-img-top" [src]="imageSearch" alt="Card image cap">
     <div class="card-body">
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <p class="card-text">Likes: {{likes}}</p>
+      <p class="card-text">Views: {{views}}</p>
+      <p class="card-text">Tags: {{tags}}</p>
     </div>
   </div>
