--- a/src/app/components/paginatio-component/paginatio-component.component.html
+++ b/src/app/components/paginatio-component/paginatio-component.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center pagination">
-  <button class="btn btn-primary" (click)="prevPage()">Anterior</button>
+  <button class="btn btn-secondary" (click)="prevPage()">Anterior</button>
   &nbsp;
-  <button class="btn btn-secondary" (click)="nextPage()">Siguiente</button>
+  <button class="btn btn-primary" (click)="nextPage()">Siguiente</button>
 </div>
