--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,28 +2,28 @@
 <div class="row mt-5">
   <div class="col-xs-12 col-sm-10 col-md-6 mx-auto text-center">
     <h1 class="mb-3">Image Search 🔎</h1>
-    <app-search (PageNumber)="setPageTotal($event)" [page]="page"></app-search>
+    <app-search (pageReset)="resetPage($event)"></app-search>
   </div>
 </div>
 <!-- images card -->
-<div class="container_elements mt-3">
-  <app-card-image style="justify-self: center"></app-card-image>
-  <app-card-image style="justify-self: center"></app-card-image>
-  <app-card-image style="justify-self: center"></app-card-image>
-  <app-card-image style="justify-self: center"></app-card-image>
+<div
+  class="container_elements mt-3"
+  *ngIf="resultImages"
+  style="margin-top: 30rem"
+>
+  <app-card-image
+    *ngFor="let item of resultImages | pagination : page"
+    style="justify-self: center"
+    [imageSearch]="item.webformatURL"
+    [likes]="item.likes"
+    [views]="item.views"
+    [tags]="item.tags"
+  ></app-card-image>
 </div>
 
 <!-- Pagination -->
-<app-paginatio-component [pageNumberTotal]="pageTotal" (PageNumber)="setPage($event)"></app-paginatio-component>
-<!-- Wages style -->
-<!-- <svg
-  style="position: absolute; bottom: 0;"
-  xmlns="http://www.w3.org/2000/svg"
-  viewBox="0 0 1500 330"
->
-  <path
-    fill="#0099ff"
-    fill-opacity="0.80" 
-    d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-  ></path>
-</svg> -->
+<app-paginatio-component
+  [pageNumberTotal]="pageTotal"
+  (PageNumber)="setPage($event)"
+></app-paginatio-component>
+
